# amtrak-recorder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: create.mysql.in  database.json.in  drop.mysql.in  update.mysql.in
scripts/: analysis.R  compare.R  gps_analysis.R  poll.py  predict.R  serve.py
scripts/cgi/: serve.py
src/: analysis.jl
xml/: launch.xml.in  only_record.xml.in
